# Darkup

./: Cargo.toml  README.md
src/: defaults.rs  headers.rs  linebreaks.rs  main.rs  settings.rs  textfixer.rs
src/application/: clipboard.rs  mod.rs
src/textfixer/: defaults.rs  headers.rs  linebreaks.rs  mod.rs  settings.rs  texthelpers.rs
