[package]
name = "darkup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
color-eyre = "0.6.2"
eframe = "0.26.0"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"
unused_mut = "allow"
unused_imports= "allow"
